@@ -3618,3 +3618,10 @@ Fait.
 ---------------------------------------------------------------
 
 Fixé à la création et à l'édition.
+
+
+#263 - BDD - Passer ORGANISME à "structure related" 
+---------------------------------------------------
+
+Fait.
+
