@@ -3,6 +3,7 @@
         "pk": 1,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "Parc national des Ecrins"
         }
     },
@@ -10,6 +11,7 @@
         "pk": 2,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "Conseil g\u00e9n\u00e9ral 38"
         }
     },
@@ -17,6 +19,7 @@
         "pk": 3,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "Conseil g\u00e9n\u00e9ral 05"
         }
     },
@@ -24,6 +27,7 @@
         "pk": 4,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "R\u00e9gion PACA"
         }
     },
@@ -31,6 +35,7 @@
         "pk": 5,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "commune 1"
         }
     },
@@ -38,6 +43,7 @@
         "pk": 6,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "commune 2"
         }
     },
@@ -45,6 +51,7 @@
         "pk": 7,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "com com 1"
         }
     },
@@ -52,6 +59,7 @@
         "pk": 8,
         "model": "common.organism",
         "fields": {
+            "structure": 1,
             "organism": "com com 2"
         }
     }
